<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/vc7">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        tools:context=".MainActivity"
        android:background="@drawable/vc3">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/compname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cname"
            android:textSize="60dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:fontFamily="monospace" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cdesc"
            android:textSize="17dp"
            android:layout_marginLeft="135dp"
            android:layout_marginTop="83dp"
            android:textColor="@color/teal_400"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="370dp"
        tools:context=".MainActivity"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mname"
            android:textSize="30dp"
            android:layout_marginStart="90dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/desig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/des"
            android:layout_marginStart="115dp"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/ihome"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/location"
            android:layout_below="@+id/desig"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desig"
            android:text="@string/add"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/iphn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/phn"
            android:layout_below="@+id/home"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/home"
            android:text="@string/tel"
            android:textSize="18dp"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="70dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/iemail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/email"
            android:layout_below="@+id/phone"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:text="@string/email"
            android:textSize="18dp"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="70dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/idnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:text="@string/idno"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="240dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>